Fixed bug #54180 (parse_url() incorrectly parses path when ? in fragment)